--- a/assets/styles/sass/_modules/_cta-bubble.scss
+++ b/assets/styles/sass/_modules/_cta-bubble.scss
@@ -7,6 +7,9 @@
 		>.grid-x {
 			min-height: 128px;
 			padding: 1rem 4.6rem;
+			@include breakpoint(medium) {
+				padding: 1rem 3.5rem;
+			}
 		}
 	}
 }
