--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -108,6 +108,15 @@ BACKGROUNDS
 /*********************
 RE-USED ELEMENTS
 *********************/
+.module {
+	margin-top: 60px;
+	margin-bottom: 60px;
+	@include breakpoint(medium) {
+		margin-top: 150px;
+		margin-bottom: 150px;		
+	}
+}
+
 .bordered {
 	border-width: 3px;
 	border-style: solid;
@@ -118,19 +127,51 @@ RE-USED ELEMENTS
 	
 }
 
+.accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after {
+	display: block;
+	width: 10px;
+	height: 6px;
+	border: 0;
+	content: "";
+	position: absolute;
+	top: 50%;
+	margin-top: -3px;
+	right: 1rem;
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.601' height='8.416' viewBox='0 0 14.601 8.416'%3E%3Cpath id='Path_1038' data-name='Path 1038' d='M5.62,11.773,0,5.9,5.62,0' transform='translate(1.414 7.033) rotate(-90)' fill='none' stroke='%23fff' stroke-linecap='round' stroke-width='2'/%3E%3C/svg%3E");
+	background-size: contain;
+}
+
 .tabs,
 .tabs-content {
 	border: 0;
 }
 
-.module {
-	margin-top: 30px;
-	margin-bottom: 30px;
+.swiper-pagination {
 	@include breakpoint(medium) {
-		margin-top: 75px;
-		margin-bottom: 75px;		
+		text-align: right;
+	}
+	.swiper-pagination-bullet {
+		width: 12px;
+		height: 12px;
+		background-color: $white;
+		border: 1px solid $brand-amethyst;
+		gap: 0;
+		margin: 5.5px;
+		opacity: 1;
+		
+		@include breakpoint(medium) {
+			border-width: 2px;
+			width: 16px;
+			height: 16px;
+		}
+		
+	&.swiper-pagination-bullet-active {
+		background-color: $brand-amethyst;
+	}
+		
 	}
 }
+
 .img-wrap {
 	&.circle-img-wrap {
 		overflow: hidden;
@@ -182,7 +223,7 @@ POSTS & CONTENT STYLES
 
 // Post meta  
 .byline {
-	color: #999;
+	color: $black;
 	time {}
 }
 
@@ -577,7 +618,6 @@ FOOTER STYLES
 *********************/
 .footer {
 	clear: both;
-	margin-top: 1em;
 }
 	
 /*********************
