--- a/assets/styles/sass/_mixins.scss
+++ b/assets/styles/sass/_mixins.scss
@@ -2,7 +2,18 @@
 	content: '';
 	display: block;
 	position: absolute;
-	background-image: repeating-linear-gradient(0deg, #fff, #fff 6px, transparent 6px, transparent 12px, #fff 12px), repeating-linear-gradient(90deg, #fff, #fff 6px, transparent 6px, transparent 12px, #fff 12px), repeating-linear-gradient(180deg, #fff, #fff 6px, transparent 6px, transparent 12px, #fff 12px), repeating-linear-gradient(270deg, #fff, #fff 6px, transparent 6px, transparent 12px, #fff 12px);
+	background-image: repeating-linear-gradient(0deg, #fff, #fff 7px, transparent 7px, transparent 13px, #fff 13px), repeating-linear-gradient(90deg, #fff, #fff 7px, transparent 7px, transparent 13px, #fff 13px), repeating-linear-gradient(180deg, #fff, #fff 7px, transparent 7px, transparent 13px, #fff 13px), repeating-linear-gradient(270deg, #fff, #fff 7px, transparent 7px, transparent 13px, #fff 13px);
+	background-size: 2px 100%, 100% 2px, 2px 100% , 100% 2px;
+	background-position: 0 0, 0 0, 100% 0, 0 100%;
+	background-repeat: no-repeat;
+	transform: rotate(180deg);
+}
+
+@mixin purple-dashed-border {
+	content: '';
+	display: block;
+	position: absolute;
+	background-image: repeating-linear-gradient(0deg, $brand-purple, $brand-purple 7px, transparent 7px, transparent 13px, $brand-purple 13px), repeating-linear-gradient(90deg, $brand-purple, $brand-purple 7px, transparent 7px, transparent 13px, #fff 13px), repeating-linear-gradient(180deg, $brand-purple, $brand-purple 7px, transparent 7px, transparent 13px, $brand-purple 13px), repeating-linear-gradient(270deg, $brand-purple, $brand-purple 7px, transparent 7px, transparent 13px, $brand-purple 13px);
 	background-size: 2px 100%, 100% 2px, 2px 100% , 100% 2px;
 	background-position: 0 0, 0 0, 100% 0, 0 100%;
 	background-repeat: no-repeat;
@@ -10,5 +21,5 @@
 }
 
 @mixin button-shadow {
-	box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+	box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.16);
 }
