--- a/assets/styles/sass/_parts/_buttons.scss
+++ b/assets/styles/sass/_parts/_buttons.scss
@@ -1,6 +1,17 @@
 .buttons {
-	.cell.style-xlarge {
-		width: 100%;
+	.cell {
+		&.style-xlarge {
+			width: 100%;
+		}
+		&:not(.style-xlarge) {
+			@include breakpoint(small down) {
+				min-width: 50%;
+				button,
+				.button {
+					width: 100%;
+				}
+			}
+		}
 	}
 }
 .button,
@@ -10,12 +21,13 @@ button,
 	font-weight: bold;
 	font-size: rem-calc(14);
 	line-height: 1.142;
-	border-width: 7px;
+	border-width: 4px;
 	padding: 0.1em 0.8264em 0.292em;
 	transition: .25s ease;
 	@include breakpoint(medium) {
 		font-size: rem-calc(23);
-		line-height: 1.13;		
+		line-height: 1.13;
+		border-width: 7px;
 	}
 	
 	&:not(.style-white-outline):not(.style-white-background):not(.style-xlarge) {
@@ -79,8 +91,12 @@ button,
 	&.style-white-outline,
 	&.style-white-background,
 	&.style-xlarge {
-		border-width: 3px;
+		border-width: 2px;
 		padding: 0.29em 1em 0.45em;
+		@include breakpoint(medium) {
+			border-width: 3px;
+
+		}
 	}
 	
 	&.style-white-background,
