--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -7,6 +7,10 @@ Stylesheet: Global Stylesheet
 /*********************
 BACKGROUNDS
 *********************/
+body#tinymce {
+	height:auto !important;
+}
+
 .transparent-bg {
 	background-color: transparent;
 }
