--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -3,6 +3,19 @@
 Stylesheet: Global Stylesheet
 
 *************************************************/
+$flush-margin: calc( (100vw - $global-width) * -.5 - .9375rem);
+
+@mixin flush-right {
+	@include breakpoint(tablet) {
+		margin-right: -0.9375rem;
+	}
+	@media (min-width: $global-width) {
+		margin-right: $flush-margin;
+	}
+	@include breakpoint(xxlarge) {
+		margin-right: -8.25rem;
+	}
+}
 
 /*********************
 BACKGROUNDS
@@ -174,6 +187,10 @@ RE-USED ELEMENTS
 	}
 		
 	}
+}
+
+.circle {
+	border-radius: 100%;
 }
 
 .img-wrap {
