--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -93,6 +93,7 @@ CSS file.
 
 @import "_parts/buttons";
 
+@import "_modules/banner";
 @import "_modules/open-play-areas";
 @import "_modules/gallery-slider";
 @import "_modules/list-gallery-slider-list";
@@ -106,6 +107,9 @@ CSS file.
 @import "_modules/accordion";
 @import "_modules/blog-slider";
 @import "_modules/text-title-text";
+
+@import "_pages/blog";
+
 
 
 
