--- a/assets/styles/sass/_footer.scss
+++ b/assets/styles/sass/_footer.scss
@@ -272,6 +272,7 @@ footer.footer {
 	.info-block:not(.accordion-item) {
 		padding-bottom: 3.25rem;
 		h2.h3 {
+			padding-top: .35rem;
 			margin-bottom: 1.1rem;
 		}
 		.text-wrap {
