--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -107,6 +107,11 @@ CSS file.
 @import "_modules/accordion";
 @import "_modules/blog-slider";
 @import "_modules/text-title-text";
+@import "_modules/colored-callout";
+@import "_modules/video";
+@import "_modules/cta-image";
+@import "_modules/image-set";
+@import "_modules/list-link-list";
 
 @import "_pages/blog";
 
