--- a/assets/styles/sass/_modules/_gallery-slider.scss
+++ b/assets/styles/sass/_modules/_gallery-slider.scss
@@ -27,9 +27,10 @@
 		}
 		
 		.progress {
+			margin-top: 3.25rem;
 			position: relative;
 			width: 100%;
-			max-width: 770px;
+			max-width: 736px;
 			height: 2px;
 			background-color: #C5B7D8;
 			
